--- a/UI/admin-dashboard.html
+++ b/UI/admin-dashboard.html
@@ -1,41 +1,79 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>iReporter | Explore</title>
+        <title>iReporter | Dashboard</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
         <div class="container">
             <header>
-            <a href="explore.html" id="logo"><h1>iReporter</h1></a>
+            <a href="admin-dashboard.html" id="logo"><h1>iReporter</h1></a>
             <div class="navigation-links">
-                <div class="nav-link-btn">
-                     <a href="explore.html">Admin</a>
-                </div>
-                <div class="nav-link-btn">
-                    <a href="ireporter-statistics.html">Statistics</a>
-                </div>
                 <div class="nav-link-btn">
                     <a href="index.html">Sign Out</a>
                 </div>
             </div>
         </header>
         <main>
-            <div class="timeline">
-                <p><strong><em>USERNAME: <span id="username">FOO-BAR FOO</span></em></strong></p>
-                <p id="timeline-label"><strong>TITLE OF THE REPORT</strong></p>
-                <p id="timeline-content">THIS REPORT ENTAILS...CONTAINS THE DESCRIPTION OF THE REPORT</p>
-                <p><img src="img/maroon-1.jpg" id="timeline-img" /></p>
-                <p><strong>Change Report Status:<strong></p>
-                <select id="change-status">
-                    <option value="resolved">Resolved</option>
-                    <option value="draft">Draft</option>
-                    <option value="under-investigation">Under Investigation</option>
-                    <option value="rejected">Rejected</option>
-                </select>
+            <div class="main-search">
+                <div class="main-search-content">
+                    <div class="main-search-content-type">
+                        <div class="home-report-type">
+                            <p>RED-FLAG</p>
+                            <p>STATUS: UNDER INVESTIGATION</p>
+                        </div>
+                    </div>
+                    <div class="main-search-content-description">
+                        <p class="home-report-description">
+                            A traffic officer was today spotted taking bribes from matatu drivers today at the Kenyatta 
+                            University bus stop. He appeared not to be shaken by the recent introduction of the Michuki rules 
+                            with the said matatu drivers also flouting the rules.
+                        </p>
+                    </div>
+                    
+                    <div class="main-search-content-options">
+                        <div class="main-search-image">
+                            <p><strong>Change Report Status:</strong></p>
+                            <select id="change-status">
+                                <option value="resolved">Under Investigation</option>
+                                <option value="draft">Rejected</option>
+                                <option value="under-investigation">Resolved</option>
+                            </select>
+                        </div>
+                    </div>
+
+                </div>  
+                 <div class="main-search-content">
+                    <div class="main-search-content-type">
+                        <div class="home-report-type">
+                            <p>INTERVENTION</p>
+                            <p>STATUS: UNDER INVESTIGATION</p>
+                        </div>
+                    </div>
+                    <div class="main-search-content-description">
+                        <p>
+                            There has been reported incidences of electricity power cuts at Kahawa West. Residents 
+                            have been left wondering where the local MCA has been too since raising the issue. Power 
+                            should be restored back to curb the recent cases of insecurity which have been on the rise 
+                            especially in the night.
+                        </p>
+                    </div>
+
+                     <div class="main-search-content-options">
+                        <div class="main-search-image">
+                            <p><strong>Change Report Status:</strong></p>
+                            <select id="change-status">
+                                <option value="resolved">Under Investigation</option>
+                                <option value="draft">Rejected</option>
+                                <option value="under-investigation">Resolved</option>
+                            </select>
+                        </div>
+                    </div>
+                    
+
+                </div>
             </div>
-            <hr>
         </main>
         <footer>
             <div>
