--- a/UI/admin-registration.html
+++ b/UI/admin-registration.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>iReporter | Admin Sign Up</title>
+        <title>iReporter | Admininstrator</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
        <div class="container">
          <header>
             <a href="index.html" id="logo"><h1>iReporter</h1></a>
-            <div class="navigation-links">
-                <div class="nav-link-btn">
-                    <a href="signin.html">Sign In</a>
-                </div>
-            </div>
         </header>
         <main>
             <div class="admin-registration">
@@ -22,7 +17,7 @@
                             <p id="main-inner-label"><strong>Administrator Sign In</strong></p>
                         </div>
                         <div class="main-inner">
-                            <form action="home.html">
+                            <form action="admin-dashboard.html">
                                 <p><input type="text" id="username" placeholder="Enter your username"></p>
                                 <p><input type="password" id="password1" placeholder="Enter your password"></p>
                                 <p><input type="submit" value="Sign In" id="submit"></p>
@@ -37,7 +32,7 @@
                             <p id="main-inner-label"><strong>Administrator Sign Up</strong></p>
                         </div>
                         <div class="main-inner">
-                            <form action="home.html">
+                            <form action="admin-registration.html">
                                 <p><input type="text" id="username" placeholder="Enter your username"></p>
                                 <p><input type="email" id="email" placeholder="Enter your email address"></p>
                                 <p><input type="password" id="password1" placeholder="Enter your password"></p>
