--- a/UI/index.html
+++ b/UI/index.html
@@ -10,6 +10,9 @@
                 <a href="index.html" id="logo"><h1>iReporter</h1></a>
                 <div class="navigation-links">
                     <div class="nav-link-btn">
+                         <a href="admin-registration.html">Administrator</a>
+                    </div>
+                    <div class="nav-link-btn">
                          <a href="signin.html">Sign In</a>
                     </div>
                     <div class="nav-link-btn">
